# little-john

./: .gitignore  README.md  Untitled.ipynb  backup1.ipynb  backup2.ipynb  backup3.ipynb  backup4.ipynb  config.py  pyproject.toml  working_predictions.ipynb
little_john/: add_to_target_list.py  broker.py  little_john.py  main.py  manual_trade.py  prediction_algorithm.py  search_stocks.py  trade_bot.py  trade_history.py  trade_plot.py  trades.json  view_trades.py
logs/: trade_history.json  trades.json  user_balance.json
tests/: test_broker.py  test_little_john.py  test_search_stocks.py  test_target_list.py
user_data/: sp500_companies.json  target_list.json
user_data/script_to_create_json/: companies.txt  create.py
