[tool.poetry]
name = "little_john"
version = "0.1.0"
description = ""
authors = ["natalie sinner <nataliesinner@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.0"
pylint = "^2.5.3"
keras = "^2.4.3"
tf-estimator-nightly = "^2.4.0-alpha.2020080801"
tf-nightly = "^2.4.0-alpha.20200808"
pytest-watch = "^4.2.0"
autopep8 = "^1.5.4"
finnhub-python = "^2.1.0"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
